--- a/materials/PyTutorial_01_Basics.ipynb
+++ b/materials/PyTutorial_01_Basics.ipynb
@@ -2105,7 +2105,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from functools import reduce\n",
@@ -2151,7 +2153,9 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from inspect import signature"
@@ -2207,7 +2211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -2257,7 +2261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2270,7 @@
        "(4, 3, 37.69911184307752, 22.1034921607095)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2278,7 +2282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -2299,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -2309,8 +2313,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-112-7195f4eab396>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mEllipse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmajoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-109-97b2df30fd00>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, majoraxis, minoraxis)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmajoraxis\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Major axis is shorter than minor axis!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-5-7195f4eab396>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mEllipse\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmajoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-2-97b2df30fd00>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, majoraxis, minoraxis)\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmajoraxis\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mminoraxis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Major axis is shorter than minor axis!'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0ma\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmajoraxis\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mValueError\u001b[0m: Major axis is shorter than minor axis!"
      ]
     }
@@ -2321,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2345,7 +2349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -2356,6 +2360,12 @@
     "    def __init__(self, radius):\n",
     "        super(Circle, self).__init__(majoraxis=radius, minoraxis=radius)\n",
     "        self.r = radius\n",
+    "    \n",
+    "    def __add__(self, other):\n",
+    "        return Circle(radius=self.r + other.r)\n",
+    "    \n",
+    "    def __sub__(self, other):\n",
+    "        return Circle(radius=self.r - other.r)\n",
     "        \n",
     "    def __repr__(self):\n",
     "        return(\"        {}:\\n\\\n",
@@ -2372,7 +2382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2381,7 +2391,7 @@
        "78.53981633974483"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2393,7 +2403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -2402,7 +2412,7 @@
        "78.53981633974483"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2413,7 +2423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -2422,7 +2432,7 @@
        "31.41592653589793"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2433,7 +2443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2470,7 +2480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -2479,7 +2489,7 @@
        "True"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2490,7 +2500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2499,7 +2509,7 @@
        "(__main__.Ellipse,)"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2510,7 +2520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2519,7 +2529,7 @@
        "(__main__.Circle, __main__.Ellipse, object)"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2528,6 +2538,52 @@
     "# Retrieve the method resolution order (MRO)\n",
     "import inspect\n",
     "inspect.getmro(circ.__class__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        Circle:\n",
+       "        r = 6\n",
+       "        area = 113.09733552923255\n",
+       "        circumference = 37.69911184307752"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Circle(8) - Circle(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "        Circle:\n",
+       "        r = 10\n",
+       "        area = 314.1592653589793\n",
+       "        circumference = 62.83185307179586"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Circle(8) + Circle(2)"
    ]
   },
   {
